--- a/E3FI_2022_2023_Maths3D_Raylib_BaseProject_VS2019/projects/VS2019/examples/core_basic_window_cpp.vcxproj
+++ b/E3FI_2022_2023_Maths3D_Raylib_BaseProject_VS2019/projects/VS2019/examples/core_basic_window_cpp.vcxproj
@@ -327,6 +327,7 @@
   <ItemGroup>
     <ClInclude Include="Draw3D.h" />
     <ClInclude Include="My3DPrimitives.h" />
+    <ClInclude Include="Referentials.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
