--- a/E3FI_2022_2023_Maths3D_Raylib_BaseProject_VS2019/projects/VS2019/examples/core_basic_window_cpp.vcxproj
+++ b/E3FI_2022_2023_Maths3D_Raylib_BaseProject_VS2019/projects/VS2019/examples/core_basic_window_cpp.vcxproj
@@ -328,7 +328,7 @@
     <ClInclude Include="Collisions3D.h" />
     <ClInclude Include="Draw3D.h" />
     <ClInclude Include="My3DPrimitives.h" />
-    <ClInclude Include="Physics.h" />
+    <ClInclude Include="Physics3D.h" />
     <ClInclude Include="Referentials3D.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
